@@ -279,7 +279,8 @@ public class GaiaTextureCoordinator {
             return null;
         }
 
-        Graphics graphics = this.atlasImage.getGraphics();
+        Graphics2D graphics = this.atlasImage.createGraphics();
+        graphics.setComposite(AlphaComposite.Src);
 
         for (GaiaBatchImage splitImage : splitImages) {
             GaiaRectangle splitRectangle = splitImage.getBatchedBoundary();
@@ -288,12 +289,13 @@ public class GaiaTextureCoordinator {
             Map<TextureType, List<GaiaTexture>> textureMap = material.getTextures();
             List<GaiaTexture> textures = textureMap.get(TextureType.DIFFUSE);
             if (!textures.isEmpty()) {
-                GaiaTexture texture = textures.get(0);
+                GaiaTexture texture = textures.getFirst();
                 BufferedImage source = isPhotorealistic ? texture.getBufferedImage() : texture.getBufferedImage(lod);
                 graphics.drawImage(source, (int) splitRectangle.getMinX(), (int) splitRectangle.getMinY(), null); // original code
                 //graphics.drawImage(randomColoredImage, (int) splitRectangle.getMinX(), (int) splitRectangle.getMinY(), null); // test code
             }
         }
+        graphics.dispose();
 
         for (GaiaBatchImage target : splitImages) {
             GaiaRectangle splitRectangle = target.getBatchedBoundary();
